--- a/app/src/main/res/layout/layout_stop_list.xml
+++ b/app/src/main/res/layout/layout_stop_list.xml
@@ -7,33 +7,38 @@
 
     <TextView
         android:text="TextView"
-        android:layout_height="wrap_content"
         android:id="@+id/textView2"
         android:textSize="25sp"
         android:fontFamily="serif"
-        android:layout_width="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView" />
+        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:text="TextView"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:id="@+id/textView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView" />
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/imageView"
+        android:layout_marginStart="8dp" />
 
     <ImageView
-        android:layout_width="68dp"
+        android:layout_width="92dp"
         app:srcCompat="@drawable/ouibuslogo"
         android:id="@+id/imageView"
-        android:layout_height="68dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_height="96dp"
+        android:adjustViewBounds="false"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
