--- a/app/src/main/res/layout/layout_stop_list.xml
+++ b/app/src/main/res/layout/layout_stop_list.xml
@@ -14,9 +14,11 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginEnd="8dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintHorizontal_bias="0.43" />
 
     <TextView
         android:text="TextView"
