--- a/app/src/main/res/menu/menu_detail.xml
+++ b/app/src/main/res/menu/menu_detail.xml
@@ -5,5 +5,5 @@
         android:id="@+id/action_favorite"
         android:icon="@drawable/ic_favorite_border_black_24dp"
         android:title="Favorites"
-        app:showAsAction="ifRoom"/>
+        app:showAsAction="ifRoom|withText"/>
 </menu>
