--- a/app/src/main/res/layout/layout_stop_list.xml
+++ b/app/src/main/res/layout/layout_stop_list.xml
@@ -8,8 +8,8 @@
     <TextView
         android:text="TextView"
         android:id="@+id/textView2"
-        android:textSize="25sp"
-        android:fontFamily="serif"
+        android:textSize="22sp"
+        android:fontFamily="sans-serif-condensed"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
@@ -39,7 +39,7 @@
         android:id="@+id/imageView"
         android:layout_height="96dp"
         android:adjustViewBounds="false"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
