--- a/app/src/main/res/layout/fragment_detail_tab.xml
+++ b/app/src/main/res/layout/fragment_detail_tab.xml
@@ -7,16 +7,25 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/hello_blank_fragment"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:id="@+id/url_String1"
+        android:layout_marginTop="56dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="20dp" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:id="@+id/url_String2"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/url_String1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="20dp" />
 
 </android.support.constraint.ConstraintLayout>
