--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,13 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="me.couzinet.ouiproject.MainActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/refresh"
+        android:icon="@drawable/ic_refresh_black_24dp"
         android:orderInCategory="100"
         android:title="@string/refresh"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
