--- a/app/src/main/res/layout/fragment_detail_tab.xml
+++ b/app/src/main/res/layout/fragment_detail_tab.xml
@@ -10,22 +10,44 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:id="@+id/url_String1"
-        android:layout_marginTop="56dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginEnd="16dp"
+        android:layout_height="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="20dp" />
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:text="TextView"
         android:layout_width="wrap_content"
         android:id="@+id/url_String2"
+        android:layout_height="20dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@+id/url_String1"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:id="@+id/url_String3"
+        android:layout_height="20dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="20dp" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/url_String4" />
+
+    <TextView
+        android:text="TextView"
+        android:layout_width="wrap_content"
+        android:id="@+id/url_String4"
+        android:layout_height="20dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/url_String2"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
