--- a/app/src/main/res/layout-land/activity_detail.xml
+++ b/app/src/main/res/layout-land/activity_detail.xml
@@ -36,15 +36,15 @@
     </android.support.design.widget.AppBarLayout>
 
     <ImageView
-        android:layout_width="127dp"
+        android:layout_width="151dp"
         android:layout_height="127dp"
         app:srcCompat="@drawable/ouibuslogo"
         android:id="@+id/imageView2"
         android:contentDescription="Logo OUIBUS"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
 
     <TextView
         android:text="TextView"
@@ -53,12 +53,12 @@
         android:id="@+id/textView"
         android:textAlignment="center"
         android:fontFamily="sans-serif"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/map"
+        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:layout_marginTop="8dp" />
 
     <TextView
         android:text="TextView"
@@ -71,10 +71,9 @@
         tools:layout_constraintRight_creator="1"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        android:layout_marginEnd="16dp" />
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/map" />
 
     <TextView
         android:text="TextView"
@@ -84,10 +83,10 @@
         android:textAlignment="center"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/textView4"
-        app:layout_constraintLeft_toRightOf="@+id/imageView2"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginStart="16dp" />
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/map" />
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         android:name="com.google.android.gms.maps.MapFragment"
@@ -95,11 +94,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintRight_creator="1"
         tools:layout_constraintLeft_creator="1"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintRight_toLeftOf="@+id/imageView2"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintHorizontal_bias="0.34" />
 </android.support.constraint.ConstraintLayout>
 </android.support.design.widget.CoordinatorLayout>
