--- a/app/src/main/res/layout/layout_stop_list.xml
+++ b/app/src/main/res/layout/layout_stop_list.xml
@@ -7,7 +7,7 @@
 
     <TextView
         android:text="TextView"
-        android:id="@+id/textView2"
+        android:id="@+id/textview_ville_stop_list"
         android:textSize="22sp"
         android:fontFamily="sans-serif-condensed"
         android:layout_width="0dp"
@@ -24,10 +24,10 @@
         android:text="TextView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/textView3"
+        android:id="@+id/textview_nom_stop_list"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textview_ville_stop_list"
         android:layout_marginEnd="8dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@+id/imageView"
